<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ff242932"
    tools:context="com.example.main.scalpel.ImageMatchActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextSwitcher
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSwitcher"
            android:layout_centerHorizontal="true"
            android:animateFirstView="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Searching"
                android:id="@+id/searchID"
                android:textColor="#ffffffff"
                android:autoText="false"
                android:layout_marginTop="400sp"
                android:visibility="invisible" />
        </TextSwitcher>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bestMatch"
            android:id="@+id/bestMatchID"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300sp"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MatchingText"
            android:id="@+id/matchingID"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textColor="#ffffffff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageMatchID"
            android:src="@drawable/android_logo_520"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="45sp"
            android:layout_marginRight="10sp"
            android:layout_alignBottom="@+id/bestMatchID"
            android:layout_marginBottom="44dp" />
    </RelativeLayout>

    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/dummy_content"
        android:visibility="invisible" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/NextBestMatchID" style="?metaButtonBarButtonStyle"
                android:layout_width="40sp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/NextBestMatch"
                android:textColor="#ff36c7ec"
                android:nestedScrollingEnabled="false"
                android:singleLine="false" />

            <Button
                style="?metaButtonBarButtonStyle"
                android:id="@+id/HomePageFromCamID"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/HomePage"
                android:textColor="#ff36c7ec"
                android:onClick="homePageHandler" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
